WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131397
Non-empty ranges misdetected as empty ranges, avoiding telephone number detection
https://bugs.webkit.org/show_bug.cgi?id=131397
Summary
Non-empty ranges misdetected as empty ranges, avoiding telephone number detec...
Brady Eidson
Reported
2014-04-08 14:55:24 PDT
Non-empty ranges misdetected as empty ranges, avoiding telephone number detection I have a simple patch that Tim Horton already reviewed in person, but will be uploading here for landing. <
rdar://problem/16553441
>
Attachments
Patch for landing
(1.56 KB, patch)
2014-04-08 14:57 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2014-04-08 14:57:47 PDT
Created
attachment 228896
[details]
Patch for landing
WebKit Commit Bot
Comment 2
2014-04-08 15:36:33 PDT
Comment on
attachment 228896
[details]
Patch for landing Clearing flags on attachment: 228896 Committed
r166968
: <
http://trac.webkit.org/changeset/166968
>
WebKit Commit Bot
Comment 3
2014-04-08 15:36:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug