Non-empty ranges misdetected as empty ranges, avoiding telephone number detection. <rdar://problem/16553441> and https://bugs.webkit.org/show_bug.cgi?id=131397

Reviewed by Tim Horton.

No new tests (Only affects a currently untested Mac-only WK2 feature)

* editing/Editor.cpp:
(WebCore::Editor::scanSelectionForTelephoneNumbers): Fix detection of empty ranges so we don’t
  early return erroneously.


Canonical link: https://commits.webkit.org/149453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166968 268f45cc-cd09-0410-ab3c-d52691b4dbfc